// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`transform options > disable all 1`] = `
{
  "code": "console.log('hello javascript')",
  "map": SourceMap {
    "file": undefined,
    "mappings": "AAAA",
    "names": [],
    "sources": [
      "/home/runner/main.js",
    ],
    "sourcesContent": undefined,
    "version": 3,
  },
}
`;

exports[`transform options > disable highlight 1`] = `
{
  "code": "console.log("%c🔦 http://localhost:3070#Li4vLi4vaG9tZS9ydW5uZXIvbWFpbi5qczoxOjE=","background: #00DC8250;padding:2px 5px;border-radius:0 3px 3px 0;margin-bottom:5px","\\n",'hello javascript')",
  "map": SourceMap {
    "file": undefined,
    "mappings": "AAAA,2KAAY",
    "names": [],
    "sources": [
      "/home/runner/main.js",
    ],
    "sourcesContent": undefined,
    "version": 3,
  },
}
`;

exports[`transform options > disable launch editor 1`] = `
{
  "code": "console.log("%c🚀 main.js·1","padding:2px 5px; border-radius:3px 0 0 3px;margin-bottom:5px;color: #111827; background: #F7DF1E","\\n",'hello javascript')",
  "map": SourceMap {
    "file": undefined,
    "mappings": "AAAA,qIAAY",
    "names": [],
    "sources": [
      "/home/runner/main.js",
    ],
    "sourcesContent": undefined,
    "version": 3,
  },
}
`;

exports[`transform options > empty option 1`] = `
{
  "code": "console.log("%c🚀 main.js·1%c🔦 http://localhost:3070#Li4vLi4vaG9tZS9ydW5uZXIvbWFpbi5qczoxOjE=","padding:2px 5px; border-radius:3px 0 0 3px;margin-bottom:5px;color: #111827; background: #F7DF1E","background: #00DC8250;padding:2px 5px;border-radius:0 3px 3px 0;margin-bottom:5px","\\n",'hello javascript')",
  "map": SourceMap {
    "file": undefined,
    "mappings": "AAAA,4RAAY",
    "names": [],
    "sources": [
      "/home/runner/main.js",
    ],
    "sourcesContent": undefined,
    "version": 3,
  },
}
`;

exports[`transform options > extended path option 1`] = `
{
  "code": "console.log("%c🚀 src/index.js·1%c🔦 http://localhost:3070#Li4vLi4vaG9tZS9ydW5uZXIvd29yay91bnBsdWdpbi10dXJiby1jb25zb2xlL3NyYy9pbmRleC5qczoxOjE=","padding:2px 5px; border-radius:3px 0 0 3px;margin-bottom:5px;color: #111827; background: #F7DF1E","background: #00DC8250;padding:2px 5px;border-radius:0 3px 3px 0;margin-bottom:5px","\\n",'hello javascript')",
  "map": SourceMap {
    "file": undefined,
    "mappings": "AAAA,6UAAY",
    "names": [],
    "sources": [
      "/home/runner/work/unplugin-turbo-console/src/index.js",
    ],
    "sourcesContent": undefined,
    "version": 3,
  },
}
`;

exports[`transform options > with prefix suffix 1`] = `
{
  "code": "console.log("-------\\n%c🚀 main.js·1%c🔦 http://localhost:3070#Li4vLi4vaG9tZS9ydW5uZXIvbWFpbi5qczoxOjE=","padding:2px 5px; border-radius:3px 0 0 3px;margin-bottom:5px;color: #111827; background: #F7DF1E","background: #00DC8250;padding:2px 5px;border-radius:0 3px 3px 0;margin-bottom:5px","\\n",'hello javascript',"\\n-------")",
  "map": SourceMap {
    "file": undefined,
    "mappings": "AAAA,qSAAY,8BAAkB",
    "names": [],
    "sources": [
      "/home/runner/main.js",
    ],
    "sourcesContent": undefined,
    "version": 3,
  },
}
`;
